# ixmp

./: .appveyor.yml  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTOR_LICENSE.md  CONTRIBUTOR_LICENSE.rst  Dockerfile  MANIFEST.in  NOTICE.md  NOTICE.rst  README.md  RELEASE_NOTES.md  RELEASE_NOTES.rst  appveyor.yml  benchmark_upsert_parameter.py  build.sh  conftest.py  install.bat  install.sh  install_rixmp.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  other.md
.github/workflows/: lint.yaml  lint.yml  publish.yaml  pytest.yaml  pytest.yml
ci/: .coveragerc  Dockerfile  appveyor-gh_229.py  appveyor-init.ps1  appveyor-install.R  appveyor-install.ps1  conda-requirements.txt  coveragerc  env.sh  install-curl.sh  install-gams.sh  install-graphviz.sh  run.sh  travis-before_install.sh  travis-install.sh
ci/teamcity/: Dockerfile  run_tests.sh
config/: README.md
doc/: Makefile  README.md  README.rst  api-backend.rst  api-model.rst  api-r.rst  api.rst  bibliography.rst  cli.rst  conf.py  contributing.rst  contributor_license.rst  data-model.rst  file-io.rst  index.rst  install.rst  make.bat  references.bib  reporting.rst  requirements.in  requirements.txt  tutorials.rst
doc/_static/: report-1.dot
doc/source/: api-backend.rst  api-model.rst  api-python.rst  api-r.rst  api.rst  conf.py  file-io.rst  index.rst  install.rst  reporting.rst  scientific_programming_api.rst  technical_requirements.rst  tutorials.rst
doc/source/_static/: custom.css
doc/source/api/: python_core.rst  python_reporting.rst  r_core.rst  r_retixmp.rst
doc/source/bibs/: main.bib
doc/source/css/: msg.css
ixmp/: __init__.py  _config.py  _version.py  cli.py  config.py  core.py  default_path_constants.py  default_paths.py  ixmp.R  model_settings.py  reporting.py  testing.py  types.py  utils.py
ixmp/backend/: __init__.py  base.py  common.py  dbapi.py  io.py  ixmp4.py  ixmp4_io.py  jdbc.py  xarray.py
ixmp/backend/jdbc/: libgdxjni64.dylib  libgmdjni64.dylib  libgmomjni64.dylib  libidxjni64.dylib  libutiljni64.dylib
ixmp/core/: item.py  platform.py  scenario.py  timeseries.py
ixmp/lib/: libgamsxjni64.dylib  libgevmjni64.dylib
ixmp/model/: __init__.py  base.py  dantzig.gms  dantzig.py  gams.py  pyomo.py
ixmp/report/: __init__.py  common.py  operator.py  reporter.py  util.py
ixmp/reporting/: __init__.py  attrseries.py  computations.py  describe.py  exceptions.py  key.py  quantity.py  reporter.py  sparsedataarray.py  testing.py  util.py  utils.py
ixmp/testing/: __init__.py  data.py  jupyter.py  resource.py
ixmp/tests/: conftest.py  test_access.py  test_cli.py  test_compat.py  test_config.py  test_feature_geodata.py  test_feature_timeseries.py  test_integration.py  test_model.py  test_perf.py  test_r.py  test_testing.py  test_timeslices.py  test_tutorials.py  test_util.py  test_utils.py
ixmp/tests/backend/: test_base.py  test_dbapi.py  test_io.py  test_ixmp4.py  test_ixmp4_io.py  test_jdbc.py  test_xarray.py
ixmp/tests/core/: __init__.py  conftest.py  test_meta.py  test_platform.py  test_scenario.py  test_timeseries.py
ixmp/tests/data/: _abort.gms  access.properties  report-config-0.yaml  report-describe.txt  report-input1.csv  reporting-exceptions.ipynb  test.properties.sample  timeseries_canning.csv
ixmp/tests/performance/: clone.py
ixmp/tests/report/: test_operator.py  test_reporter.py  test_util.py
ixmp/tests/reporting/: __init__.py  conftest.py  test_computations.py  test_exceptions.py  test_key.py  test_quantity.py  test_reporter.py  test_reporting.py
ixmp/util/: __init__.py  ixmp4.py  pandas.py  sphinx_linkcode_github.py
ixmp/utils/: __init__.py  sphinx_linkcode_github.py
retixmp/: build_retixmp.R
retixmp/R/: adapt_to_ret.R  init_retixmp.R
retixmp/man/: adapt_to_ret.Rd  retixmp.Rd
retixmp/source/: .Rhistory  DESCRIPTION  NAMESPACE
retixmp/source/R/: adapt_to_ret.R  init_retixmp.R
retixmp/source/man/: retixmp.Rd
retixmp/tests/: testthat.R
retixmp/tests/testthat/: test_core.R
rixmp/: DESCRIPTION  build_rixmp.R
rixmp.legacy/: build_rixmp.legacy.R
rixmp.legacy/source/: DESCRIPTION  README.md
rixmp.legacy/source/R/: class_ixmp.Platform.R  class_ixmp.Scenario.R  init_rixmp.legacy.R
rixmp.legacy/source/man/: ixmp.Platform.Rd  rixmp.legacy.Rd
rixmp/R/: adapt_to_ret.R  init_rixmp.R
rixmp/man/: adapt_to_ret.Rd  rixmp.Rd
rixmp/source/: DESCRIPTION  NAMESPACE  README.md
rixmp/source/R/: class_ixmp.Platform.R  class_ixmp.Scenario.R  init_rixmp.R  model_config.R  run_gams.R
rixmp/tests/: testthat.R
tests/: conftest.py  r_tests.r  test_access.py  test_admin.py  test_check_year.py  test_cli.py  test_config.py  test_core.py  test_feature_geodata.py  test_feature_timeseries.py  test_integration.py  test_jdbc_backend.py  test_model.py  test_r.py  test_regions.py  test_reporting.py  test_reporting_utils.py  test_run.py  test_timeslices.py  test_timesteps.py  test_tutorials.py  test_utils.py  testdb_setup.py  testing_utils.py  transport_ixmp.gms
tests/backend/: test_base.py  test_jdbc.py  test_jdbc_perf.py
tests/core/: conftest.py  test_platform.py  test_scenario.py  test_timeseries.py
tests/data/: hsqldb.properties  report-config-0.yaml  report-describe.txt  report-input.csv  report_config-0.yaml  test.properties_template  test_auth.properties_template
tests/reporting/: test_key.py  test_quantity.py  test_reporting.py
tests/testdb/: ixmptest.lobs  ixmptest.script  start_client.sh  test.properties.server  test.properties_template
tutorial/: README.md  README.rst
tutorial/transport/: R.legacy_transport.ipynb  R.legacy_transport_scenario.ipynb  README.md  R_transport.R  R_transport.ipynb  R_transport_ret.ipynb  R_transport_scenario.ipynb  R_transport_scenario_ret.ipynb  py_transport.ipynb  py_transport_scenario.ipynb  transport.gms
(+27 files in other folders)
