[build-system]
requires = ["build", "setuptools-scm"]

[project]
dynamic = ["version"]
name = "ixmp"
description = "The ix modeling platform"
authors = [{ name = "IIASA Energy, Climate, and Environment (ECE) program" }]
maintainers = [
  { name = "Paul Natsuo Kishimoto", email = "mail@paul.kishimoto.name" },
  { name = "Fridolin Glatter", email = "glatter@iiasa.ac.at" },
]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: R",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
  "click",
  "genno >= 1.16",
  "JPype1 >= 1.2.1",
  "openpyxl",
  "pandas >= 1.2",
  "pint",
  "PyYAML",
  "xarray",
]

[project.urls]
homepage = "https://github.com/iiasa/ixmp"
repository = "https://github.com/iiasa/ixmp"
documentation = "https://docs.messageix.org/ixmp"

[project.optional-dependencies]
docs = [
  "ixmp[tests]",
  "GitPython",
  "numpydoc",
  "sphinx >= 3.0",
  "sphinx_rtd_theme",
  "sphinxcontrib-bibtex",
]
report = ["genno[compat,graphviz]"]
tutorial = ["jupyter"]
tests = [
  "ixmp[report,tutorial]",
  "memory_profiler",
  "nbclient >= 0.5",
  "pretenders >= 1.4.4",
  "pytest >= 5",
  "pytest-benchmark",
  "pytest-cov",
  "pytest-rerunfailures",
]

[project.scripts]
ixmp = "ixmp.cli:main"

[tool.coverage.report]
exclude_also = [
  # Imports only used by type checkers
  "if TYPE_CHECKING:",
]
omit = ["ixmp/util/sphinx_linkcode_github.py"]

[tool.isort]
profile = "black"

[tool.mypy]

[[tool.mypy.overrides]]
# Packages/modules for which no type hints are available.
module = [
  "dask.*",
  "jpype",
  "memory_profiler",
  "pandas.*",
  "pyam",
  "pretenders.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Disable faulthandler plugin on Windows to prevent spurious console noise; see
# - https://github.com/jpype-project/jpype/issues/561
# - https://github.com/iiasa/ixmp/issues/229
# - https://github.com/iiasa/ixmp/issues/247
addopts = """
  -m "not rixmp and not performance"
  -p no:faulthandler
  --benchmark-skip
  --cov=ixmp --cov-report="""
markers = [
  "rixmp: test of the ixmp R interface.",
  "performance: ixmp performance test.",
]

[tool.ruff]
select = ["C9", "E", "F", "I", "W"]

[tool.ruff.mccabe]
# FIXME the following exceed this limit
# .backend.io.s_read_excel: 26
# .backend.jdbc.JDBCBackend.item_get_elements: 19
# .core.scenario.Scenario.add_set: 17
max-complexity = 15

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
