[metadata]
name = ixmp
author = IIASA IIASA Energy, Climate, and Environment (ECE) program
author_email = message_ix@iiasa.ac.at
license = Apache
description = ix modeling platform
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/iiasa/ixmp
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: R
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = ixmp
zip_safe = True
include_package_data = True
install_requires =
    click
    genno >= 1.11.0
    JPype1 >= 1.2.1
    openpyxl
    pandas >= 1.2
    pint
    PyYAML
    xarray
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
docs =
    numpydoc
    sphinx >= 3.0
    sphinx_rtd_theme
    sphinxcontrib-bibtex
report =
    genno[compat,graphviz]
tutorial =
    jupyter
tests =
    %(docs)s
    %(report)s
    %(tutorial)s
    codecov
    memory_profiler
    nbclient >= 0.5
    pretenders >= 1.4.4
    pytest >= 5
    pytest-benchmark
    pytest-cov

[options.entry_points]
console_scripts =
    ixmp = ixmp.cli:main

[tool:pytest]
# Disable faulthandler plugin on Windows to prevent spurious console noise; see
# - https://github.com/jpype-project/jpype/issues/561
# - https://github.com/iiasa/ixmp/issues/229
# - https://github.com/iiasa/ixmp/issues/247
addopts = -m "not rixmp and not performance"
    -p no:faulthandler
    --benchmark-skip
    --cov=ixmp --cov-report=
markers =
    rixmp: test of the ixmp R interface.
    performance: ixmp performance test.

[aliases]
test = pytest

[isort]
force_grid_wrap = 0
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True

[flake8]
max-line-length = 88

[mypy]
# Empty section required as of mypy 0.800;
# see https://github.com/python/mypy/issues/9940

[mypy-dask.*]
ignore_missing_imports = True
[mypy-jpype.*]
ignore_missing_imports = True
[mypy-nbclient.*]
ignore_missing_imports = True
[mypy-nbformat.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-memory_profiler.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pint.*]
ignore_missing_imports = True
[mypy-pyam.*]
ignore_missing_imports = True
[mypy-pretenders.*]
ignore_missing_imports = True
[mypy-requests_cache.*]
ignore_missing_imports = True
[mypy-requests_mock.*]
ignore_missing_imports = True
[mypy-setuptools.*]
ignore_missing_imports = True
[mypy-sparse.*]
ignore_missing_imports = True
