[metadata]
name = ixmp
author = IIASA Energy, Climate, and Environment (ECE) program
author_email = message_ix@iiasa.ac.at
license = Apache
description = ix modeling platform
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/iiasa/ixmp
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: R
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = ixmp
zip_safe = True
include_package_data = True
install_requires =
    click
    genno >= 1.11.0
    JPype1 >= 1.2.1
    openpyxl
    pandas >= 1.2
    pint
    PyYAML
    xarray
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
docs =
    numpydoc
    sphinx >= 3.0
    sphinx_rtd_theme
    sphinxcontrib-bibtex
report =
    genno[compat,graphviz]
tutorial =
    jupyter
tests =
    %(docs)s
    %(report)s
    %(tutorial)s
    codecov
    memory_profiler
    nbclient >= 0.5
    pretenders >= 1.4.4
    pytest >= 5
    pytest-benchmark
    pytest-cov

[options.entry_points]
console_scripts =
    ixmp = ixmp.cli:main

[flake8]
max-line-length = 88
