[metadata]
name = ixmp
author = IIASA Energy, Climate, and Environment (ECE) program
author_email = message_ix@iiasa.ac.at
license = Apache
description = ix modeling platform
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/iiasa/ixmp
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: R
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = ixmp
# https://mypy.readthedocs.io/en/latest/installed_packages.html
zip_safe = False
include_package_data = True
install_requires =
    click
    genno >= 1.12.0
    JPype1 >= 1.2.1
    openpyxl
    pandas >= 1.2
    pint
    PyYAML
    xarray

[options.extras_require]
docs =
    GitPython
    numpydoc
    sphinx >= 3.0
    sphinx_rtd_theme
    sphinxcontrib-bibtex
report =
    genno[compat,graphviz]
tutorial =
    jupyter
tests =
    %(docs)s
    %(report)s
    %(tutorial)s
    codecov
    memory_profiler
    nbclient >= 0.5
    pretenders >= 1.4.4
    pytest >= 5
    pytest-benchmark
    pytest-cov

[options.entry_points]
console_scripts =
    ixmp = ixmp.cli:main

[flake8]
# FIXME the following exceed this limit
# .backend.io.s_read_excel: 26
# .backend.jdbc.JDBCBackend.item_get_elements: 19
# .core.scenario.Scenario.add_set: 17
max-complexity = 15
max-line-length = 88
